manifests/apps-kustomize/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demogitops
  labels:
    app: backend
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: backend
