manifests/apps-kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: demogitops
spec:
  port:
    targetPort: http
  # tls:
  #   termination: edge
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
